man pages: fixed a typo and adapted wording in two cases

--- a/man/bp-addon-consistency-check.8
+++ b/man/bp-addon-consistency-check.8
@@ -11,7 +11,7 @@ Program
 \fBbp-addon-consistency-check\fR [\fI<configfile>\fR]
 .SH DESCRIPTION
 \fBbp-addon-consistency-check\fR is a script that reads in a business
-process definition file and checks the consistency of the included defintions.
+process definition file and checks the consistency of the included definitions.
 .PP
 For more information you can visit bp-addon website:
 .IP
