--- a/man/bp-cfg2service-cfg.8
+++ b/man/bp-cfg2service-cfg.8
@@ -26,11 +26,11 @@ Name of the business process definition file (if not explicitly specified
 the default file /usr/local/bp-addon/etc/business-processes.conf is used).
 .TP
 \fB-tt\fR \fI<template_toplevel>\fR
-Name of the toplevel template (if not explicitly specified the default
+Name of the template for toplevel business processes (if not explicitly specified the default
 toplevel template generic-bp-service is used).
 .TP
 \fB-tm\fR \fI<template_minor>\fR
-Name of the sublevel template (if not explicitly specified the default
+Name of the template fro sublevel business processes (if not explicitly specified the default
 sublevel template generic-bp-detail-service is used).
 .TP
 \fB-o\fR \fI<output_file>\fR
